[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts-C/Semestres.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Backgrounds/Disciplinas/Background Disciplina.png" type="Texture" id=2]
[ext_resource path="res://Imagens/Objetos/Disciplinas/brain.png" type="Texture" id=3]
[ext_resource path="res://Imagens/Grid 12.png" type="Texture" id=4]
[ext_resource path="res://Cenas/MenuSup2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Imagens/Objetos/Disciplinas/circulo azul escuro.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Objetos/Disciplinas/circulo borda rosa01.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Objetos/Disciplinas/circulo borda rosa.png" type="Texture" id=8]
[ext_resource path="res://Fontes/FontGodot/Semestres.tres" type="DynamicFont" id=9]
[ext_resource path="res://Imagens/Botoes/seguinte.png" type="Texture" id=10]
[ext_resource path="res://Imagens/Botoes/seguinte_c.png" type="Texture" id=11]
[ext_resource path="res://Imagens/Botoes/seguinte_h.png" type="Texture" id=12]

[node name="Semestres" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Cerebro" type="TextureRect" parent="Background"]
margin_left = 360.0
margin_top = 77.0
margin_right = 1561.0
margin_bottom = 1004.0
texture = ExtResource( 3 )

[node name="Grid" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Opcoes" parent="." instance=ExtResource( 5 )]

[node name="Semestre1" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 437.076
margin_top = 254.317
margin_right = 591.076
margin_bottom = 402.317
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Semestre2" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 642.79
margin_top = 394.449
margin_right = 796.79
margin_bottom = 542.449
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1

[node name="Semestre3" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 769.453
margin_top = 158.907
margin_right = 923.453
margin_bottom = 306.907
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
valign = 1

[node name="Semestre4" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 911.163
margin_top = 410.928
margin_right = 1065.16
margin_bottom = 558.928
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
valign = 1

[node name="Semestre5" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 1044.89
margin_top = 214.286
margin_right = 1198.89
margin_bottom = 362.286
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"
align = 1
valign = 1

[node name="Semestre6" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 1273.72
margin_top = 325.072
margin_right = 1427.72
margin_bottom = 473.072
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "6"
align = 1
valign = 1

[node name="Semestre7" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 1123.24
margin_top = 533.381
margin_right = 1277.24
margin_bottom = 681.381
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "7"
align = 1
valign = 1

[node name="Semestre8" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 905.189
margin_top = 627.24
margin_right = 1059.19
margin_bottom = 775.24
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre8"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8"
align = 1
valign = 1

[node name="Semestre9" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 1127.13
margin_top = 794.954
margin_right = 1281.13
margin_bottom = 942.954
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre9"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"
align = 1
valign = 1

[node name="Semestre10" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 1330.21
margin_top = 629.967
margin_right = 1484.21
margin_bottom = 777.967
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Semestre10"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -74.0
margin_right = 77.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Anterior" type="TextureButton" parent="."]
margin_left = 164.0
margin_top = 476.0
margin_right = 417.0
margin_bottom = 954.0
rect_scale = Vector2( -0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[connection signal="pressed" from="Semestre1" to="." method="_on_Semestre1_pressed"]
[connection signal="pressed" from="Semestre2" to="." method="_on_Semestre2_pressed"]
[connection signal="pressed" from="Semestre3" to="." method="_on_Semestre3_pressed"]
[connection signal="pressed" from="Semestre4" to="." method="_on_Semestre4_pressed"]
[connection signal="pressed" from="Semestre5" to="." method="_on_Semestre5_pressed"]
[connection signal="pressed" from="Semestre6" to="." method="_on_Semestre6_pressed"]
[connection signal="pressed" from="Semestre7" to="." method="_on_Semestre7_pressed"]
[connection signal="pressed" from="Semestre8" to="." method="_on_Semestre8_pressed"]
[connection signal="pressed" from="Semestre9" to="." method="_on_Semestre9_pressed"]
[connection signal="pressed" from="Semestre10" to="." method="_on_Semestre10_pressed"]
[connection signal="pressed" from="Anterior" to="." method="_on_Anterior_pressed"]
